fix .wrap box-sizing

--- a/src/index.css
+++ b/src/index.css
@@ -455,6 +455,7 @@ mark{background-color:var(--bg-warning);}
 	.hide-screen{display:none !important;}
 	.wrap{max-width:60em;}
 	.read{max-width:40em;}
+	.wrap, .read, .narrow{box-sizing:border-box;}
 
 	/* topbar */
 	
